test/parallel/forall/zip/zipArrMismatch.good
zipArrMismatch.chpl:4: error: halt reached - size mismatch in zippered iteration (dimension 0)
